--- a/Explore Datasets and Partition Train and Test Sets.ipynb
+++ b/Explore Datasets and Partition Train and Test Sets.ipynb
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1105,11 +1105,11 @@
     "    train_set = dataset[~dataset['text_id'].isin(test_texts[genre])]\n",
     "    \n",
     "    test_set_file_name = 'data/test/{}/words.csv'.format(genre)\n",
-    "    test_set.to_csv(test_set_file_name)\n",
+    "    test_set.to_csv(test_set_file_name, index=False)\n",
     "    display('{}: {}'.format(test_set_file_name, len(test_set)))\n",
     "    \n",
     "    train_set_file_name = 'data/train/{}/words.csv'.format(genre)\n",
-    "    train_set.to_csv(train_set_file_name)\n",
+    "    train_set.to_csv(train_set_file_name, index=False)\n",
     "    display('{}: {}'.format(train_set_file_name, len(train_set)))"
    ]
   },
