Update and add Topic Modeling features

--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -39,132 +39,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Context Unigram"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess_data(words, want_lc=False):\n",
-    "    genre = words.iloc[0]['genre']\n",
-    "    \n",
-    "    def build_content_words(all_words):\n",
-    "        # Keeping content words: http://ucrel.lancs.ac.uk/bnc2/bnc2guide.htm#m2adv\n",
-    "        # Does not include forms of 'be', 'do', 'have', or modal verbs,\n",
-    "        # as suggested in https://github.com/EducationalTestingService/metaphor/tree/master/content-words\n",
-    "        content_word_pos = set([\n",
-    "            'NN1', 'NN2', 'NN0',\n",
-    "            'NP0',\n",
-    "            'NN1-NP0', 'NN1-VVB', 'NN1-VVG', 'NN2-VVZ',\n",
-    "            'NP0-NN1',\n",
-    "            'VVB', 'VVD', 'VVG', 'VVI', 'VVN', 'VVZ',\n",
-    "            'VVB-NN1', 'VVD-VVN', 'VVD-AJ0', 'VVG-AJ0', 'VVG-NN1', 'VVZ-NN2',\n",
-    "            'AJ0', 'AJC', 'AJS',\n",
-    "            'AJ0-NN1', 'AJ0-VVG', 'AJ0-VVN',\n",
-    "            'AV0', 'AVQ', 'AVP',\n",
-    "            'AV0-AJ0'\n",
-    "        ])\n",
-    "        \n",
-    "        content_words = all_words[all_words['word_type'].isin(content_word_pos)]\n",
-    "        \n",
-    "        return content_words\n",
-    "    \n",
-    "    def get_test_fold_ids(words):\n",
-    "        num_folds = {\n",
-    "            'newspapers': 10,\n",
-    "            'conversation': 10,\n",
-    "            'academic': 10,\n",
-    "            'fiction': 11\n",
-    "        }\n",
-    "\n",
-    "        test_fold_ids = defaultdict(int)\n",
-    "\n",
-    "        for i, (text, _) in enumerate(words.groupby('text_id')):\n",
-    "            test_fold_ids[text] = i % num_folds[genre]\n",
-    "\n",
-    "        return words['text_id'].apply(lambda x: test_fold_ids[x])\n",
-    "        \n",
-    "    \n",
-    "    def build_labels(words):\n",
-    "#         print('Building labels.')\n",
-    "        labels = words['function'] == 'mrw'\n",
-    "        \n",
-    "        return labels\n",
-    "    \n",
-    "    content_words = build_content_words(words)\n",
-    "    \n",
-    "    test_fold_ids = get_test_fold_ids(content_words)\n",
-    "    assert len(content_words) == len(test_fold_ids)\n",
-    "    \n",
-    "    y = build_labels(content_words)\n",
-    "    \n",
-    "    vocabulary = content_words[['word']].drop_duplicates().set_index('word')\n",
-    "    \n",
-    "    X = build_features(content_words, vocabulary, want_lc, genre)\n",
-    "    \n",
-    "    shuffle(X, y, random_state=0)\n",
-    "    return X, test_fold_ids, vocabulary, y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_features(dataset, vocabulary, want_lc, genre): \n",
-    "    sparse_unigram_features, _ = sparse_featurize(dataset, vocabulary)\n",
-    "    X = sparse_unigram_features\n",
-    "    \n",
-    "    if want_lc:\n",
-    "        lc_feature = build_lc_feature(dataset, genre)\n",
-    "        X = hstack([X, csr_matrix(np.array(y)[:,None])], format='csr')\n",
-    "    \n",
-    "    return X\n",
-    "    \n",
-    "\n",
-    "def sparse_featurize(words, vocabulary):\n",
-    "    words = words.sort_values('word_id')\n",
-    "    \n",
-    "    iterable_sentences = words.groupby('sentence_id')['word'].apply(list)\n",
-    "\n",
-    "    indices = []\n",
-    "    data = []\n",
-    "    indptr = [0]\n",
-    "    for i, word, sentence_id in words[['word', 'sentence_id']].itertuples():\n",
-    "        sentence = iterable_sentences[sentence_id]\n",
-    "\n",
-    "        # Used to generate a row of 0's and 1's for sparse matrix\n",
-    "        unique_unigram_indices = set()\n",
-    "        for context_word in sentence:\n",
-    "            if context_word == word:\n",
-    "                continue\n",
-    "            if context_word not in vocabulary.index:\n",
-    "                unique_unigram_indices.add(len(vocabulary))\n",
-    "            else:\n",
-    "                unique_unigram_indices.add(vocabulary.index.get_loc(context_word))\n",
-    "\n",
-    "        # Data = 1 at column index of sparse matrix = row index of word in vocabulary.\n",
-    "        indices.extend(unique_unigram_indices)  # Indices of the data values in this row.\n",
-    "        data.extend(np.ones(len(unique_unigram_indices), dtype=int))  # Data of all one's.\n",
-    "        indptr.append(indptr[-1]+len(unique_unigram_indices))\n",
-    "\n",
-    "        if not i % 2000:\n",
-    "            print('-', end='', flush=True)\n",
-    "\n",
-    "    return (\n",
-    "        csr_matrix((data, indices, indptr), dtype=int, shape=(len(words), len(vocabulary)+1)),\n",
-    "        iterable_sentences\n",
-    "    )   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Model"
    ]
   },
@@ -208,6 +82,130 @@
     "    \n",
     "    def predict(self, X):\n",
     "        return self.clf_.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_data(words, want_lc=False, run_elkb=True):\n",
+    "    genre = words.iloc[0]['genre']\n",
+    "    \n",
+    "    content_words = build_content_words(words)\n",
+    "    \n",
+    "    test_fold_ids = get_test_fold_ids(content_words, genre)\n",
+    "    assert len(content_words) == len(test_fold_ids)\n",
+    "    \n",
+    "    y = build_labels(content_words)\n",
+    "    \n",
+    "    vocabulary = content_words[['word']].drop_duplicates().set_index('word')\n",
+    "    \n",
+    "    X = build_features(content_words, vocabulary, genre, want_lc, run_elkb)\n",
+    "    \n",
+    "    shuffle(X, y, random_state=0)\n",
+    "    return X, test_fold_ids, vocabulary, y\n",
+    "\n",
+    "def build_content_words(all_words):\n",
+    "    # Keeping content words: http://ucrel.lancs.ac.uk/bnc2/bnc2guide.htm#m2adv\n",
+    "    # Does not include forms of 'be', 'do', 'have', or modal verbs,\n",
+    "    # as suggested in https://github.com/EducationalTestingService/metaphor/tree/master/content-words\n",
+    "    content_word_pos = set([\n",
+    "        'NN1', 'NN2', 'NN0',\n",
+    "        'NP0',\n",
+    "        'NN1-NP0', 'NN1-VVB', 'NN1-VVG', 'NN2-VVZ',\n",
+    "        'NP0-NN1',\n",
+    "        'VVB', 'VVD', 'VVG', 'VVI', 'VVN', 'VVZ',\n",
+    "        'VVB-NN1', 'VVD-VVN', 'VVD-AJ0', 'VVG-AJ0', 'VVG-NN1', 'VVZ-NN2',\n",
+    "        'AJ0', 'AJC', 'AJS',\n",
+    "        'AJ0-NN1', 'AJ0-VVG', 'AJ0-VVN',\n",
+    "        'AV0', 'AVQ', 'AVP',\n",
+    "        'AV0-AJ0'\n",
+    "    ])\n",
+    "\n",
+    "    content_words = all_words[all_words['word_type'].isin(content_word_pos)]\n",
+    "\n",
+    "    return content_words\n",
+    "\n",
+    "def get_test_fold_ids(words, genre):\n",
+    "    num_folds = {\n",
+    "        'newspapers': 10,\n",
+    "        'conversation': 10,\n",
+    "        'academic': 10,\n",
+    "        'fiction': 11\n",
+    "    }\n",
+    "\n",
+    "    test_fold_ids = defaultdict(int)\n",
+    "\n",
+    "    for i, (text, _) in enumerate(words.groupby('text_id')):\n",
+    "        test_fold_ids[text] = i % num_folds[genre]\n",
+    "\n",
+    "    return words['text_id'].apply(lambda x: test_fold_ids[x])\n",
+    "\n",
+    "def build_labels(words):\n",
+    "#         print('Building labels.')\n",
+    "    labels = words['function'] == 'mrw'\n",
+    "\n",
+    "    return labels\n",
+    "\n",
+    "def build_features(dataset, vocabulary, genre, want_lc, run_elkb): \n",
+    "    sparse_unigram_features, _ = sparse_featurize(dataset, vocabulary)\n",
+    "    X = sparse_unigram_features\n",
+    "    \n",
+    "    if want_lc:\n",
+    "        lc_feature = build_lc_feature(dataset, genre, run_elkb)\n",
+    "        X = hstack([X, csr_matrix(np.array(lc_feature)[:,None])], format='csr')\n",
+    "    \n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Context Unigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sparse_featurize(words, vocabulary):\n",
+    "    words = words.sort_values('word_id')\n",
+    "    \n",
+    "    iterable_sentences = words.groupby('sentence_id')['word'].apply(list)\n",
+    "\n",
+    "    indices = []\n",
+    "    data = []\n",
+    "    indptr = [0]\n",
+    "    for i, word, sentence_id in words[['word', 'sentence_id']].itertuples():\n",
+    "        sentence = iterable_sentences[sentence_id]\n",
+    "\n",
+    "        # Used to generate a row of 0's and 1's for sparse matrix\n",
+    "        unique_unigram_indices = set()\n",
+    "        for context_word in sentence:\n",
+    "            if context_word == word:\n",
+    "                continue\n",
+    "            if context_word not in vocabulary.index:\n",
+    "                unique_unigram_indices.add(len(vocabulary))\n",
+    "            else:\n",
+    "                unique_unigram_indices.add(vocabulary.index.get_loc(context_word))\n",
+    "\n",
+    "        # Data = 1 at column index of sparse matrix = row index of word in vocabulary.\n",
+    "        indices.extend(unique_unigram_indices)  # Indices of the data values in this row.\n",
+    "        data.extend(np.ones(len(unique_unigram_indices), dtype=int))  # Data of all one's.\n",
+    "        indptr.append(indptr[-1]+len(unique_unigram_indices))\n",
+    "\n",
+    "        if not i % 2000:\n",
+    "            print('-', end='', flush=True)\n",
+    "\n",
+    "    return (\n",
+    "        csr_matrix((data, indices, indptr), dtype=int, shape=(len(words), len(vocabulary)+1)),\n",
+    "        iterable_sentences\n",
+    "    )   "
    ]
   },
   {
@@ -301,10 +299,9 @@
     "                csv_writer.writerow(row)\n",
     "\n",
     "def get_lexical_chains(dataset):\n",
-    "    longest_chains = pd.read_csv('tmp/longest_chains.csv')  # Paragraphs with longest chains != ''\n",
+    "    longest_chains = pd.read_csv('data/tmp/longest_chains.csv')  # Paragraphs with longest chains != ''\n",
     "\n",
     "    longest_chain_in_paragraphs = longest_chains.merge(paragraphs, left_on='paragraph_id', right_index=True)\n",
-    "\n",
     "    words_and_longest_chains = (\n",
     "        longest_chain_in_paragraphs\n",
     "        .merge(sentences)\n",
@@ -325,11 +322,13 @@
     "\n",
     "    return words_and_longest_chains[['word_id', 'is_in_longest_chain']]\n",
     "\n",
-    "def build_lc_feature(dataset, genre):\n",
+    "def build_lc_feature(dataset, genre, run_elkb):\n",
     "    paragraphs = build_paragraphs(dataset)\n",
-    "    save_paragraphs(paragraphs)\n",
     "    \n",
-    "    get_longest_chains(genre)\n",
+    "    if run_elkb:\n",
+    "        save_paragraphs(paragraphs)\n",
+    "\n",
+    "        get_longest_chains(genre)\n",
     "    \n",
     "    lc_feature = get_lexical_chains(dataset)\n",
     "    \n",
@@ -339,13 +338,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def great():\n",
-    "    print('great!')"
+    "Topic modeling"
    ]
   },
   {
