--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,15 @@
     "from sklearn.utils.validation import check_X_y, check_array, check_is_fitted\n",
     "from sklearn.utils.estimator_checks import check_estimator\n",
     "from scipy.sparse import hstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
