update notebooks for topic distribution feature

--- a/Context Unigram Model.ipynb
+++ b/Context Unigram Model.ipynb
@@ -2,42 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import os\n",
-    "import json\n",
-    "import csv\n",
-    "import math\n",
-    "import scipy.sparse\n",
-    "from scipy.sparse import csr_matrix\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "from sklearn.utils import shuffle\n",
-    "from sklearn.base import BaseEstimator\n",
-    "from sklearn.utils.validation import check_X_y, check_array, check_is_fitted\n",
-    "from sklearn.utils.estimator_checks import check_estimator\n",
-    "from sklearn.base import clone\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import classification_report\n",
-    "from collections import defaultdict\n",
-    "from sklearn.model_selection import PredefinedSplit"
+    "%run model_functions.ipynb"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 177,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pd.set_option('display.max_colwidth', -1)"
+    "-----------------"
    ]
   },
   {
@@ -49,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +156,7 @@
        "4  a6u-fragment02  a6u      academic  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,15 +985,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 303,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run model_functions.ipynb"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1043,9 +1010,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vocabulary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-1aa537ee5c44>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpenalty\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'l1'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msolver\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'liblinear'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'balanced'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mvocabulary\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m )\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vocabulary' is not defined"
+     ]
+    }
+   ],
    "source": [
     "unigram_classifier = UnigramClassifier(\n",
     "    verbose=10, random_state=0, C=10, penalty='l1',\n",
@@ -5183,12 +5162,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "--------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's try our model on all 4 genres!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -5197,254 +5183,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building content words.\n",
-      "Fitting 10 folds for each of 40 candidates, totalling 400 fits\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
+      "-----------Fitting 10 folds for each of 40 candidates, totalling 400 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------[LibLinear]---------{'academic': None, 'fiction': None, 'conversation': None, 'newspapers': None}\n",
-      "Building content words.\n",
-      "Fitting 10 folds for each of 40 candidates, totalling 400 fits\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------[LibLinear]-----------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   2.1s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    4.6s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------[LibLinear]-------{'academic': None, 'fiction': None, 'conversation': None, 'newspapers': None}\n",
-      "Building content words.\n",
-      "Fitting 10 folds for each of 40 candidates, totalling 400 fits\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   2.8s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    4.9s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   2.0s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    8.7s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.6s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:   11.9s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.4s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:   14.7s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.8s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   18.1s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.7s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   6 out of   6 | elapsed:   21.5s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.6s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   7 out of   7 | elapsed:   24.9s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.5s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   8 out of   8 | elapsed:   28.3s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.4s\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   9 out of   9 | elapsed:   31.4s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----[LibLinear]------[CV] .................... C=0.01, penalty=l1, score=0.0, total=   1.8s\n",
-      "[CV] C=0.01, penalty=l2 ..............................................\n",
-      "-----[LibLinear]------[CV] .... C=0.01, penalty=l2, score=0.18181818181818182, total=   1.8s\n",
-      "[CV] C=0.01, penalty=l2 ..............................................\n",
-      "------[LibLinear]------[CV] .... C=0.01, penalty=l2, score=0.23434991974317818, total=   1.8s\n",
-      "[CV] C=0.01, penalty=l2 ..............................................\n",
-      "-----[LibLinear]------[CV] ..... C=0.01, penalty=l2, score=0.1669024045261669, total=   1.5s\n",
-      "[CV] C=0.01, penalty=l2 ..............................................\n",
-      "-----[LibLinear]------[CV] .... C=0.01, penalty=l2, score=0.22752808988764048, total=   1.5s\n",
-      "[CV] C=0.01, penalty=l2 ..............................................\n",
-      "{'academic': None, 'fiction': None, 'conversation': None, 'newspapers': None}\n",
-      "Building content words.\n",
-      "Fitting 10 folds for each of 40 candidates, totalling 400 fits\n",
-      "[CV] C=0.01, penalty=l1 ..............................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----{'academic': None, 'fiction': None, 'conversation': None, 'newspapers': None}\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   5 tasks      | elapsed:    3.2s\n",
+      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:    3.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  17 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 tasks      | elapsed:    4.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    5.2s\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    5.8s\n",
+      "[Parallel(n_jobs=-1)]: Done  53 tasks      | elapsed:    6.7s\n",
+      "[Parallel(n_jobs=-1)]: Done  64 tasks      | elapsed:    7.8s\n",
+      "[Parallel(n_jobs=-1)]: Done  77 tasks      | elapsed:    9.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  90 tasks      | elapsed:   10.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 105 tasks      | elapsed:   12.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 120 tasks      | elapsed:   14.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 137 tasks      | elapsed:   19.3s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "results = {\n",
     "    'academic':None,\n",
-    "    'fiction':None,\n",
-    "    'conversation':None,\n",
+    "#     'fiction':None,\n",
+    "#     'conversation':None,\n",
     "    'newspapers':None\n",
     "}\n",
     "\n",
-    "with open('results/context_unigram_model2.txt', 'w') as f:\n",
-    "    for genre in results:\n",
+    "for genre in results:\n",
+    "    with open('results/U_{}.txt'.format(genre), 'w') as f:\n",
     "        try:\n",
     "            train_set = pd.read_csv('data/train/{}/words.csv'.format(genre), encoding='ISO--8859-1', na_filter=False)\n",
     "            X_train, test_fold_ids, vocabulary, y_train = preprocess_data(train_set)\n",
     "            \n",
     "            unigram_classifier = UnigramClassifier(\n",
     "                verbose=10, random_state=0, C=10, penalty='l1',\n",
-    "                solver='saga', class_weight='balanced', max_iter=500,\n",
+    "                solver='liblinear', class_weight='balanced', max_iter=500,\n",
     "                vocabulary=vocabulary\n",
     "            )\n",
     "\n",
@@ -5453,7 +5233,7 @@
     "            hyperparameters = {'C':C, 'penalty':penalty}\n",
     "            clf = GridSearchCV(unigram_classifier, hyperparameters,\n",
     "                               cv=PredefinedSplit(test_fold_ids),\n",
-    "                               verbose=10, scoring='f1')\n",
+    "                               verbose=10, scoring='f1', n_jobs=-1)\n",
     "            \n",
     "            clf.fit(X_train, y_train)\n",
     "\n",
@@ -5464,31 +5244,17 @@
     "            result = classification_report(y_test, preds, output_dict)\n",
     "            print(result)\n",
     "            results[genre] = result\n",
-    "        except:\n",
-    "            print('OOPS!!')\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
     "            print(results)\n",
     "            f.write(json.dumps(results))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'academic': '              precision    recall  f1-score   support\\n\\n       False       0.77      0.23      0.36      6744\\n        True       0.22      0.76      0.34      1882\\n\\n   micro avg       0.35      0.35      0.35      8626\\n   macro avg       0.49      0.49      0.35      8626\\nweighted avg       0.65      0.35      0.35      8626\\n',\n",
-       " 'fiction': '              precision    recall  f1-score   support\\n\\n       False       0.85      0.76      0.80      2837\\n        True       0.18      0.28      0.22       524\\n\\n   micro avg       0.68      0.68      0.68      3361\\n   macro avg       0.51      0.52      0.51      3361\\nweighted avg       0.75      0.68      0.71      3361\\n',\n",
-       " 'conversation': '              precision    recall  f1-score   support\\n\\n       False       0.90      0.75      0.82      2368\\n        True       0.13      0.33      0.19       282\\n\\n   micro avg       0.70      0.70      0.70      2650\\n   macro avg       0.52      0.54      0.50      2650\\nweighted avg       0.82      0.70      0.75      2650\\n',\n",
-       " 'newspapers': '              precision    recall  f1-score   support\\n\\n       False       0.81      0.71      0.76      3978\\n        True       0.23      0.35      0.28      1010\\n\\n   micro avg       0.64      0.64      0.64      4988\\n   macro avg       0.52      0.53      0.52      4988\\nweighted avg       0.69      0.64      0.66      4988\\n'}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results"
    ]
