--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,20 @@
     "from sklearn.base import BaseEstimator, RegressorMixin\n",
     "from sklearn.utils.validation import check_X_y, check_array, check_is_fitted\n",
     "from sklearn.utils.estimator_checks import check_estimator\n",
-    "from scipy.sparse import hstack"
+    "from scipy.sparse import hstack\n",
+    "import warnings\n",
+    "from joblib import dump, load\n",
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "from scipy.spatial.distance import cosine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings(action='once')"
    ]
   },
   {
